start slides linear model

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Latex
+*concordance.tex
+*.log
+*.toc
+*.snm
+*.gz
+*.vrb
+*.nav
+
 # History files
 .Rhistory
 .Rapp.history
@@ -31,3 +40,4 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+.Rproj.user
